# cpp-utilities

./: README.md
byte-utilities/: ByteUtilities.hpp  CMakeLists.txt  Tests.cpp
cpp-member-function-as-c-callback/: Main.cpp  Makefile
